[gd_scene load_steps=39 format=2]

[ext_resource path="res://buttonIcon/back-button.png" type="Texture" id=1]
[ext_resource path="res://tutorial/tutorial_1.gd" type="Script" id=2]
[ext_resource path="res://font/Gecade.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://blockIcon/SUB.png" type="Texture" id=4]
[ext_resource path="res://blockIcon/OUTPUT.png" type="Texture" id=5]
[ext_resource path="res://blockIcon/INPUT.png" type="Texture" id=6]
[ext_resource path="res://blockIcon/LDA.png" type="Texture" id=7]
[ext_resource path="res://blockIcon/HLT.png" type="Texture" id=8]
[ext_resource path="res://blockIcon/BR.png" type="Texture" id=9]
[ext_resource path="res://blockIcon/DAT.png" type="Texture" id=10]
[ext_resource path="res://blockIcon/STO.png" type="Texture" id=11]
[ext_resource path="res://blockIcon/ADD.png" type="Texture" id=12]
[ext_resource path="res://blockIcon/BRZ.png" type="Texture" id=13]
[ext_resource path="res://blockIcon/BRP.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "tut1_anime_ADD"
tracks/0/type = "value"
tracks/0/path = NodePath("ADD:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 220.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ADD_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "tut1_anime_BR"
tracks/0/type = "value"
tracks/0/path = NodePath("BR:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BR_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "tut1_anime_BRP"
tracks/0/type = "value"
tracks/0/path = NodePath("BRP:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540.794, 545 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BRP_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "tut1_anime_BRZ"
tracks/0/type = "value"
tracks/0/path = NodePath("BRZ:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540.794, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BRZ_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "tut1_anime_DAT"
tracks/0/type = "value"
tracks/0/path = NodePath("DAT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 860.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DAT_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "tut1_anime_HLT"
tracks/0/type = "value"
tracks/0/path = NodePath("HLT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 700.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HLT_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("IN:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IN_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "tut1_anime_LDA"
tracks/0/type = "value"
tracks/0/path = NodePath("LDA:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 380.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LDA_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "tut1_anime_OUT"
tracks/0/type = "value"
tracks/0/path = NodePath("OUT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60.7937, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OUT_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
resource_name = "tut1_anime_STO"
tracks/0/type = "value"
tracks/0/path = NodePath("STO:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 380.794, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("STO_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "tut1_anime_SUB"
tracks/0/type = "value"
tracks/0/path = NodePath("SUB:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 220.794, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SUB_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=13]
resource_name = "tut1_anime_ADD"
tracks/0/type = "value"
tracks/0/path = NodePath("ADD:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 220.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ADD_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "tut1_anime_BR"
tracks/0/type = "value"
tracks/0/path = NodePath("BR:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BR_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "tut1_anime_BRP"
tracks/0/type = "value"
tracks/0/path = NodePath("BRP:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540.794, 545 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BRP_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=16]
resource_name = "tut1_anime_BRZ"
tracks/0/type = "value"
tracks/0/path = NodePath("BRZ:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540.794, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BRZ_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "tut1_anime_DAT"
tracks/0/type = "value"
tracks/0/path = NodePath("DAT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 860.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DAT_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=18]
resource_name = "tut1_anime_HLT"
tracks/0/type = "value"
tracks/0/path = NodePath("HLT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 700.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HLT_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("IN:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IN_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=20]
resource_name = "tut1_anime_LDA"
tracks/0/type = "value"
tracks/0/path = NodePath("LDA:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 380.794, 405 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LDA_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=21]
resource_name = "tut1_anime_OUT"
tracks/0/type = "value"
tracks/0/path = NodePath("OUT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60.7937, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OUT_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=22]
resource_name = "tut1_anime_STO"
tracks/0/type = "value"
tracks/0/path = NodePath("STO:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 380.794, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("STO_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=23]
resource_name = "tut1_anime_SUB"
tracks/0/type = "value"
tracks/0/path = NodePath("SUB:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 220.794, 475 ), Vector2( 190, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SUB_infoText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=24]
size = 20
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.793701
margin_top = -0.793704
margin_right = -0.793701
margin_bottom = -0.793701
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -55.0
margin_top = -14.0
margin_right = 1067.0
margin_bottom = 190.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="."]
margin_left = 26.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 538.0
rect_scale = Vector2( 0.06, 0.06 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="RichTextLabel" parent="."]
margin_left = 139.699
margin_top = 23.1433
margin_right = 903.699
margin_bottom = 191.143
custom_fonts/normal_font = SubResource( 1 )
text = "This tutorial will introduce blocks in AL Blocky

There are 11 blocks available blocks in AL Blocky representing the instruction set in LMC

Please click the different block below for more details! "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IN" type="Button" parent="."]
margin_left = 60.0
margin_top = 405.0
margin_right = 1082.01
margin_bottom = 672.001
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OUT" type="Button" parent="."]
margin_left = 60.7937
margin_top = 475.0
margin_right = 1082.8
margin_bottom = 742.001
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ADD" type="Button" parent="."]
margin_left = 220.794
margin_top = 405.0
margin_right = 1242.79
margin_bottom = 672.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 12 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SUB" type="Button" parent="."]
margin_left = 220.794
margin_top = 475.0
margin_right = 1242.79
margin_bottom = 742.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LDA" type="Button" parent="."]
margin_left = 380.794
margin_top = 405.0
margin_right = 1402.79
margin_bottom = 672.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STO" type="Button" parent="."]
margin_left = 380.794
margin_top = 475.0
margin_right = 1402.79
margin_bottom = 742.001
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BR" type="Button" parent="."]
margin_left = 540.794
margin_top = 405.0
margin_right = 1562.79
margin_bottom = 672.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRZ" type="Button" parent="."]
margin_left = 540.794
margin_top = 475.0
margin_right = 1562.79
margin_bottom = 742.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 13 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRP" type="Button" parent="."]
margin_left = 540.794
margin_top = 545.0
margin_right = 1562.79
margin_bottom = 812.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 14 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DAT" type="Button" parent="."]
margin_left = 860.794
margin_top = 405.0
margin_right = 1882.79
margin_bottom = 672.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HLT" type="Button" parent="."]
margin_left = 700.794
margin_top = 405.0
margin_right = 1722.79
margin_bottom = 672.0
rect_scale = Vector2( 0.12, 0.12 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/tut1_anime_ADD = SubResource( 2 )
anims/tut1_anime_BR = SubResource( 3 )
anims/tut1_anime_BRP = SubResource( 4 )
anims/tut1_anime_BRZ = SubResource( 5 )
anims/tut1_anime_DAT = SubResource( 6 )
anims/tut1_anime_HLT = SubResource( 7 )
anims/tut1_anime_IN = SubResource( 8 )
anims/tut1_anime_LDA = SubResource( 9 )
anims/tut1_anime_OUT = SubResource( 10 )
anims/tut1_anime_STO = SubResource( 11 )
anims/tut1_anime_SUB = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/tut1_anime_ADD = SubResource( 13 )
anims/tut1_anime_BR = SubResource( 14 )
anims/tut1_anime_BRP = SubResource( 15 )
anims/tut1_anime_BRZ = SubResource( 16 )
anims/tut1_anime_DAT = SubResource( 17 )
anims/tut1_anime_HLT = SubResource( 18 )
anims/tut1_anime_IN = SubResource( 19 )
anims/tut1_anime_LDA = SubResource( 20 )
anims/tut1_anime_OUT = SubResource( 21 )
anims/tut1_anime_STO = SubResource( 22 )
anims/tut1_anime_SUB = SubResource( 23 )

[node name="IN_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 837.0
margin_bottom = 374.0
custom_fonts/normal_font = SubResource( 24 )
text = "IN Instruction
Machine Code: 901

Usage: 
Copy the input value to the accumulator"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OUT_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 932.0
margin_bottom = 371.0
custom_fonts/normal_font = SubResource( 24 )
text = "OUT Instruction
Machine Code: 902

Usage: 
Put the value from the accumulator to the output box"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ADD_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 966.0
margin_bottom = 391.0
custom_fonts/normal_font = SubResource( 24 )
text = "ADD Instruction
Machine Code: 1XX   (XX is the address)

Usage: 
Add the values of the accumulator by the values of the given mailbox address"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SUB_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 966.0
margin_bottom = 390.0
custom_fonts/normal_font = SubResource( 24 )
text = "SUB Instruction
Machine Code: 2XX   (XX is the address)

Usage: 
Subtract the value of the accumulator by the values of given mailbox address"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LDA_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 989.0
margin_bottom = 371.0
custom_fonts/normal_font = SubResource( 24 )
text = "LDA Instruction
Machine Code: 5XX   (XX is the address)

Usage: 
Load the values of the given mailbox address to the accumulator "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STO_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 989.0
margin_bottom = 371.0
custom_fonts/normal_font = SubResource( 24 )
text = "STO Instruction
Machine Code: 3XX   (XX is the address)

Usage: 
Copy the value of the accumulator to the given mailbox address"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BR_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 357.0
margin_top = 264.0
margin_right = 968.0
margin_bottom = 392.0
custom_fonts/normal_font = SubResource( 24 )
text = "BR Instruction
Machine Code: 6XX   (XX is the address)

Usage: 
Set the value of the program counter by the value of the given mailbox address  "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRZ_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 354.0
margin_top = 266.0
margin_right = 989.0
margin_bottom = 402.0
custom_fonts/normal_font = SubResource( 24 )
text = "BRZ Instruction
Machine Code: 7XX    (XX is the address)

Usage:
 Set the value of the program counter by the value of the given mailbox address if the value of the accumulator is 000 
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRP_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 359.381
margin_top = 253.238
margin_right = 970.381
margin_bottom = 402.238
custom_fonts/normal_font = SubResource( 24 )
text = "BRP Instruction
Machine Code: 8XX   (XX is the address)

Usage: 
Set the value of the program counter by the value of the given mailbox address if the value of the accumulator is 000 or positive
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HLT_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 359.381
margin_top = 253.238
margin_right = 970.381
margin_bottom = 402.238
custom_fonts/normal_font = SubResource( 24 )
text = "HLT Instruction
Machine Code: 000

Usage:
Stop the execution of the program"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DAT_infoText" type="RichTextLabel" parent="."]
visible = false
margin_left = 359.381
margin_top = 253.238
margin_right = 970.381
margin_bottom = 402.238
custom_fonts/normal_font = SubResource( 24 )
text = "DAT (Data Location)
Machine Code: None

Usage: Declaring data storage in the given mailbox address"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="IN" to="." method="_on_IN_pressed"]
[connection signal="pressed" from="OUT" to="." method="_on_OUT_pressed"]
[connection signal="pressed" from="ADD" to="." method="_on_ADD_pressed"]
[connection signal="pressed" from="SUB" to="." method="_on_SUB_pressed"]
[connection signal="pressed" from="LDA" to="." method="_on_LDA_pressed"]
[connection signal="pressed" from="STO" to="." method="_on_STO_pressed"]
[connection signal="pressed" from="BR" to="." method="_on_BR_pressed"]
[connection signal="pressed" from="BRZ" to="." method="_on_BRZ_pressed"]
[connection signal="pressed" from="BRP" to="." method="_on_BRP_pressed"]
[connection signal="pressed" from="DAT" to="." method="_on_DAT_pressed"]
[connection signal="pressed" from="HLT" to="." method="_on_HLT_pressed"]
